--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </div>
             <div class="footer-info">
                 <h3>Contato</h3>
-                <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
+                <p><i class="fas fa-phone"></i> +55 68 9227-2523</p>
                 <p><i class="fas fa-map-marker-alt"></i> Rua dos Espetinhos, 123</p>
             </div>
             <div class="social-media">
