--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </div>
             <div class="footer-info">
                 <h3>Contato</h3>
-                <p><i class="fas fa-phone"></i> +55 68 9208-8865</p>
+                <p><i class="fas fa-phone"></i> </p>
                 <p><i class="fas fa-map-marker-alt"></i> Rua dos Espetinhos, 123</p>
             </div>
             <div class="social-media">
